# terminal_canvas

./: .gitignore  README.md  package-lock.json
console-canvas/: README.md  package.json
console-canvas/src/: App.tsx  statusDetector.ts  types.ts
console-canvas/src-tauri/: Cargo.toml
console-canvas/src-tauri/resources/: status-hook.sh
console-canvas/src-tauri/src/: history.rs  hooks.rs  lib.rs  pty_manager.rs  theme.rs
console-canvas/src/components/: Canvas.tsx
console-canvas/src/stores/: timelineStore.ts
docs/: DESIGN.md
src/: App.css  App.tsx  types.ts
src-tauri/: tauri.conf.json
src-tauri/resources/: status-hook.ps1  status-hook.sh
src-tauri/src/: commands.rs  history.rs  hooks.rs  lib.rs  main.rs  platform.rs  pty_manager.rs  theme.rs  workspace.rs
src/components/: TerminalPane.tsx  TerminalView.tsx  TimelinePanel.tsx  Toolbar.tsx
src/stores/: canvasStore.ts  terminalStore.ts  themeStore.ts
