[package]
name = "terminal-canvas"
version = "0.1.0"
description = "Multiple console manager on infinite canvas"
authors = ["you"]
edition = "2021"

[lib]
name = "terminal_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
